CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc5

	- The cupsCancelJob() function did not return 0 when the
	  job could not be canceled (STR #340)
	- The scheduler accessed the job attributes before they
	  were set (STR #347, fix to STR #335)


CHANGES IN CUPS V1.1.20rc4

	- The scheduler did not move the incoming job attributes
	  in the operation group to the job group (STR #335)
	- The cupsDoFileRequest() function did not check for an
	  early HTTP response while sending the file (STR #314)
	- The web interfaces did not quote #, ?, or . in printer
	  names, which caused some problems with the generated
	  URLs (STR #320)
	- CUPS couldn't be completely compiled with the -dDEBUG
	  option (STR #331)


CHANGES IN CUPS V1.1.20rc3

	- More SLP changes (STR #259)
	- Revamped the child signal handling code to completely
	  avoid deadlock issues on Solaris (STR #325)
	- The lpadmin command displayed an incorrect error
	  message when the "-u" option was provided with no
	  arguments (STR #313)
	- The web admin interface did not display an error
	  message if the PPD file could not be loaded (STR #308)
	- The ppdEmit() functions did not use the correct
	  orientation value position for custom page sizes (STR
	  #292)


CHANGES IN CUPS V1.1.20rc2

	- The serial backend set the IXANY option on the port
	  for XON/XOFF flow control; this caused problems with
	  printers that returned status info but were not ready
	  for more print data (STR #287)
	- The scheduler didn't support scripted index files
	  (index.php, index.pl, etc. - STR #290)
	- The scheduler did not correctly localize script files
	  with "GET" variables (STR #268)
	- Changes in job classification are now logged (STR
	  #289)
	- Fixed a few more SLP-related bugs (STR #259)
	- Updated the user/group configure checks for MacOS X
	  10.3 (STR #270)
	- Fixed an offset bug in the PDF filter (STR #284)
	- The cupsDoRequest() and cupsDoFileRequest() functions