@@ -3,10 +3,13 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc5
 
-	- The cupsCancelJob() function did not return 0 when the
-	  job could not be canceled (STR #340)
+	- The scheduler did not initialize the browse socket
+	  file descriptor properly when only SLP browsing was
+	  enabled (STR #259)
 	- The scheduler accessed the job attributes before they
 	  were set (STR #347, fix to STR #335)
+	- The cupsCancelJob() function did not return 0 when the
+	  job could not be canceled (STR #340)
 
 
 CHANGES IN CUPS V1.1.20rc4
